[gd_scene load_steps=12 format=3 uid="uid://pihai2shfvfw"]

[ext_resource type="PackedScene" uid="uid://drgv73tlsrekt" path="res://game/enemies/enemy/shooting_enemy.tscn" id="1_8q8cu"]
[ext_resource type="Texture2D" uid="uid://buoklgn5jc7hn" path="res://assets/graphics/FlyingLevel/Witch-cloth.png" id="2_7pvyq"]
[ext_resource type="Texture2D" uid="uid://ou6q7we48gkw" path="res://assets/graphics/FlyingLevel/Witch.png" id="2_mglg0"]
[ext_resource type="PackedScene" uid="uid://csyevsiffel1" path="res://game/enemies/witch/witch_zap.tscn" id="4_p4n4a"]
[ext_resource type="Script" path="res://game/enemies/witch/witch_2.gd" id="5_2xyhm"]
[ext_resource type="Script" path="res://components/color_flicker_component.gd" id="6_pguie"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vbuo5"]
atlas = ExtResource("2_mglg0")
region = Rect2(0, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt3xs"]
atlas = ExtResource("2_mglg0")
region = Rect2(24, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhc6f"]
atlas = ExtResource("2_mglg0")
region = Rect2(48, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwk6v"]
atlas = ExtResource("2_mglg0")
region = Rect2(72, 0, 24, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_b7g2d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbuo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt3xs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhc6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwk6v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Witch2" instance=ExtResource("1_8q8cu")]
script = ExtResource("5_2xyhm")
has_target = true

[node name="Body" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_b7g2d")

[node name="Dress" type="Sprite2D" parent="." index="1"]
texture = ExtResource("2_7pvyq")

[node name="SpawnerComponent" parent="." index="3"]
what_to_spawn = ExtResource("4_p4n4a")

[node name="FireRateTimer" parent="." index="4"]
one_shot = true

[node name="ShootingMarker" parent="." index="5"]
position = Vector2(-17, 3)

[node name="VisibleOnScreenEnabler2D" parent="." index="6"]
rect = Rect2(-12, -9, 24, 19)

[node name="HurtboxComponent" parent="." index="7"]
collision_layer = 2
collision_mask = 0

[node name="HitboxComponent" parent="." index="8"]
collision_layer = 0

[node name="ColorFlickerComponent" type="Node" parent="." index="11" node_paths=PackedStringArray("sprite")]
script = ExtResource("6_pguie")
sprite = NodePath("../Dress")
